--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
 output: 
-  html_document:
-    keep_md: true
+  rmarkdown::github_document
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
