--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
 output: 
-  rmarkdown::github_document
+  html_document:
+    keep_md: true
 ---
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
